--- a/client/photo-viewer.html
+++ b/client/photo-viewer.html
@@ -4,6 +4,8 @@
     <title>Photo Viewer</title>
   </head>
   <body>
-    <img src="ullr.png" alt="photo" class="photo">
+    <img src="ullr.png" alt="photo" class="photo" />
+    <img src="monochrome-ullr.png" alt="monochrome photo" />
+    <img src="resized-ullr.png" alt="resized photo" />
   </body>
 </html>
